<resources>
    <string name="app_name">RuniCash</string>

    <string name="period_1h">12H</string>
    <string name="period_1day">1D</string>
    <string name="period_1week">1W</string>
    <string name="period_1month">1M</string>
    <string name="period_3month">3M</string>
    <string name="period_1year">1Y</string>
    <string name="period_all">ALL</string>

    <string name="more">More</string>
    <string name="r">▲</string>
    <string name="statistic">Statistic</string>
    <string name="about">About</string>

</resources>